--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
   width: 100%;
@@ -7,7 +11,6 @@ body {
   background-image: url("img/board.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-
   background-size: cover;
 
   color: white;
@@ -275,4 +278,26 @@ button {
   width: 50%;
   display: flex;
   justify-content: space-around;
+}
+
+.petition {
+  margin: 0 auto;
+  width: 80%;
+}
+
+.petition-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  width: 100%;
+  padding-bottom: 50px;
+}
+.petition-para {
+  width: 55%;
+  padding-right: 10px;
+}
+
+.signatures {
+  width: 45%;
+  padding-right: 10px;
 }
