--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -31,6 +31,13 @@ body {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 0;
+}
+
+/* Customize Dark Mode Theme */
+.light-mode {
+  background-image: none;
+  background-color: lightskyblue;
+  color: black;
 }
 
 /*
@@ -139,7 +146,7 @@ button {
 .navbar ul li {
   float: left;
   margin: 10px;
-  padding: 0.5% 5%;
+  padding: 0.5% 2%;
 }
 
 /* Style rule set for individual li link */
