--- a/style.css
+++ b/style.css
@@ -308,3 +308,11 @@ button {
   width: 45%;
   padding-right: 10px;
 }
+
+/* Add to CSS file */
+.error {
+  border-style: solid;
+  border-width: 2px;
+  border-color: red;
+  background: pink;
+}
